fixed background image overlapping buttons

--- a/css/home.css
+++ b/css/home.css
@@ -25,3 +25,7 @@
     border-radius: 5px;
     box-sizing: border-box;
 }
+
+.container-fluid {
+    position: relative;
+}
